# multimedia_player_framework_OH_fork

./: .gitattributes  0001-prepare-download-for-huawei.patch  1.diff  11-29  14.diff  14.diff:Zone.Identifier  2942.diff  2952.diff  2957.diff  BUILD.gn  README.md  README_zh.md  add_url.diff  bundle.json  config.gni  hisysevent.yaml  media.patch  media1.diff  ohos.build  player.diff
interfaces/kits/ndk/: BUILD.gn  libnative_media.ndk.json  ndk_av_codec.h  ndk_av_errors.h  ndk_av_format.h  ndk_av_memory.h
interfaces/kits/ndk/avcodec/: BUILD.gn  libavcodec.ndk.json
resources/: BUILD.gn
services/engine/gstreamer/avspliter/: BUILD.gn  gst_avspliter.cpp  gst_avspliter.h  gst_avspliter_pipeline.cpp  gst_avspliter_pipeline.h  gst_avspliter_priv.h
services/etc/: BUILD.gn  codec_caps.xml  media_service.cfg  recorder_configs.xml
services/etc/rk3568/: recorder_configs.xml
test/capi/: BUILD.gn  media_capi_sample.c  media_capi_sample.cpp
test/capi/avcodec/: audiodec_native_sample.cpp  audiodec_native_sample.h  audioenc_native_sample.cpp  audioenc_native_sample.h  avcodec_native_utils.cpp  avcodec_native_utils.h  avcodec_ndk_sample.h  videodec_native_sample.cpp  videodec_native_sample.h  videodec_ndk_sample.c  videoenc_native_sample.cpp  videoenc_native_sample.h
test/capi/common/: native_sample_log.h
test/fuzztest/: BUILD.gn  aw_common.cpp  aw_common.h  common.cpp  common.h  test_metadata.cpp  test_metadata.h  test_player.cpp  test_player.h  test_recorder.cpp  test_recorder.h
test/fuzztest/acodecconfigure_fuzzer/: BUILD.gn  acodecconfigure_fuzzer.cpp
test/fuzztest/acodecfile_fuzzer/: BUILD.gn  acodecfile_fuzzer.cpp  acodecfile_fuzzer.h
test/fuzztest/acodecfile_fuzzer/corpus/: LC_AAC_1_8000_1s.aac  init
test/fuzztest/avcodec_fuzztest/acodecconfigure_fuzzer/: BUILD.gn
test/fuzztest/avcodec_fuzztest/acodecfile_fuzzer/: BUILD.gn
test/fuzztest/avcodec_fuzztest/vcodecconfigure_fuzzer/: BUILD.gn
test/fuzztest/avcodec_fuzztest/vcodecfile_fuzzer/: BUILD.gn
test/fuzztest/avmetadata_fuzztest/avmetadatafetchframeattime_fuzzer/: BUILD.gn  avmetadatafetchframeattime_fuzzer.cpp
test/fuzztest/avmetadata_fuzztest/avmetadatafile_fuzzer/: BUILD.gn  avmetadatafile_fuzzer.cpp
test/fuzztest/avmetadata_fuzztest/avmetadataresolvemetadata_fuzzer/: BUILD.gn  avmetadataresolvemetadata_fuzzer.cpp
test/fuzztest/avmetadata_fuzztest/avmetadatasetsource_fuzzer/: BUILD.gn  avmetadatasetsource_fuzzer.cpp
test/fuzztest/avmetadatafetchframeattime_fuzzer/: BUILD.gn  avmetadatafetchframeattime_fuzzer.cpp  avmetadatafetchframeattime_fuzzer.h
test/fuzztest/avmetadatafile_fuzzer/: BUILD.gn  avmetadatafile_fuzzer.cpp  avmetadatafile_fuzzer.h
test/fuzztest/avmetadataresolvemetadata_fuzzer/: BUILD.gn  avmetadataresolvemetadata_fuzzer.cpp  avmetadataresolvemetadata_fuzzer.h
test/fuzztest/avmetadatasetsource_fuzzer/: BUILD.gn  avmetadatasetsource.cpp  avmetadatasetsource.h  avmetadatasetsource_fuzzer.cpp  avmetadatasetsource_fuzzer.h
test/fuzztest/common/: aw_common.h  test_recorder.cpp  test_recorder.h  test_screen_capture.h  test_soundpool.cpp  test_soundpool.h
test/fuzztest/metadatafile_fuzzer/: BUILD.gn  metadatafile_fuzzer.cpp  metadatafile_fuzzer.h
test/fuzztest/pixelmap_fuzzer/: BUILD.gn  pixelmap_fuzzer.cpp  pixelmap_fuzzer.h
test/fuzztest/pixelmapfile_fuzzer/: BUILD.gn  pixelmapfile_fuzzer.cpp  pixelmapfile_fuzzer.h
test/fuzztest/player_fuzztest/playerfile_fuzzer/: BUILD.gn
test/fuzztest/player_fuzztest/playerseek_fuzzer/: BUILD.gn
test/fuzztest/player_fuzztest/playerservicestub_fuzzer/: BUILD.gn  playerservicestub_fuzzer.h
test/fuzztest/player_fuzztest/playersetvolume_fuzzer/: BUILD.gn
test/fuzztest/player_fuzztest/playerstub_fuzzer/: BUILD.gn  player_service_proxy_fuzzer.cpp  player_service_proxy_fuzzer.h
test/fuzztest/playerfile_fuzzer/: BUILD.gn  playerfile_fuzzer.cpp
test/fuzztest/playerseek_fuzzer/: playerseek_fuzzer.cpp
test/fuzztest/playersetvolume_fuzzer/: playersetvolume_fuzzer.cpp
test/fuzztest/recorder_fuzztest/recordergetsurface_fuzzer/: BUILD.gn  recordergetsurface_fuzzer.cpp
test/fuzztest/recorder_fuzztest/recordersetaudiochannels_fuzzer/: BUILD.gn  recordersetaudiochannels_fuzzer.cpp
test/fuzztest/recorder_fuzztest/recordersetaudiochannelsnum_fuzzer/: BUILD.gn
test/fuzztest/recorder_fuzztest/recordersetaudioencoder_fuzzer/: BUILD.gn  recordersetaudioencoder_fuzzer.cpp
test/fuzztest/recorder_fuzztest/recordersetaudioencodingbitrate_fuzzer/: BUILD.gn  recordersetaudioencodingbitrate_fuzzer.cpp
test/fuzztest/recorder_fuzztest/recordersetaudioencodingbitratebitrate_fuzzer/: recordersetaudioencodingbitratebitrate_fuzzer.cpp  recordersetaudioencodingbitratebitrate_fuzzer.h
test/fuzztest/recorder_fuzztest/recordersetaudiosamplerate_fuzzer/: BUILD.gn  recordersetaudiosamplerate_fuzzer.cpp
test/fuzztest/recorder_fuzztest/recordersetaudiosampleraterate_fuzzer/: BUILD.gn  recordersetaudiosampleraterate_fuzzer.cpp  recordersetaudiosampleraterate_fuzzer.h
test/fuzztest/recorder_fuzztest/recordersetaudiosource_fuzzer/: BUILD.gn  recordersetaudiosource_fuzzer.cpp
test/fuzztest/recorder_fuzztest/recordersetcapturerate_fuzzer/: BUILD.gn  recordersetcapturerate_fuzzer.cpp  recordersetcapturerate_fuzzer.h
test/fuzztest/recordersetaudiochannels_fuzzer/: BUILD.gn  recordersetaudiochannels_fuzzer.cpp
test/fuzztest/recordersetaudiosource_fuzzer/: BUILD.gn  recordersetaudiosource_fuzzer.cpp
test/fuzztest/recorderstop_fuzzer/: BUILD.gn  recorderstop_fuzzer.cpp
test/fuzztest/resource/: ohos_test.xml
test/fuzztest/vcodecconfigure_fuzzer/: BUILD.gn  vcodecconfigure_fuzzer.cpp  vcodecconfigure_fuzzer.h
test/fuzztest/vcodecfile_fuzzer/: BUILD.gn  vcodecfile_fuzzer.cpp  vcodecfile_fuzzer.h
test/ndk/: BUILD.gn  media_ndk_sample.c  media_ndk_sample.cpp
test/ndk/avcodec/: audiodec_ndk_sample.c  audiodec_ndk_sample.cpp  audiodec_ndk_sample.h  audioenc_ndk_sample.c  audioenc_ndk_sample.cpp  audioenc_ndk_sample.h  avcodec_ndk_sample.h  videodec_ndk_sample.c  videoenc_ndk_sample.c  videoenc_ndk_sample.cpp
test/unittest/avcodec_list_test/: BUILD.gn
(+1374 files in other folders)
