# Copyright (C) 2022-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  multimedia_player_framework_support_audio_only = false
  multimedia_player_framework_support_recorder = true
  multimedia_player_framework_support_codec = true
  multimedia_player_framework_support_muxer = true
  multimedia_player_framework_support_metadata = true
  multimedia_player_framework_support_gstreamer = true
  multimedia_player_framework_support_jsapi = true
  multimedia_player_framework_support_test = true
}

media_defines = []

if (multimedia_player_framework_support_audio_only) {
  media_defines += [ "SUPPORT_AUDIO_ONLY" ]
}

if (multimedia_player_framework_support_recorder) {
  media_defines += [ "SUPPORT_RECORDER" ]
}

if (multimedia_player_framework_support_codec) {
  media_defines += [ "SUPPORT_CODEC" ]
}

if (multimedia_player_framework_support_muxer) {
  media_defines += [ "SUPPORT_MUXER" ]
}

if (multimedia_player_framework_support_metadata) {
  media_defines += [ "SUPPORT_METADATA" ]
}
