# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_etc("media_service.rc") {
  if ("${product_name}" == "m40") {
    source = "media_service.cfg"
  } else {
    if (use_musl) {
      source = "media_service.cfg"
    } else {
      source = "media_service.rc"
    }
  }
  relative_install_dir = "init"
  part_name = "multimedia_media_standard"
  subsystem_name = "multimedia"
}

ohos_prebuilt_etc("codec_caps.xml") {
  source = "codec_caps.xml"

  subsystem_name = "multimedia"
  module_install_dir = "etc/codec"
  part_name = "multimedia_media_standard"
}

ohos_prebuilt_etc("recorder_configs.xml") {
  if ("${product_name}" == "rk3568") {
    source = "rk3568/recorder_configs.xml"
  } else {
    source = "recorder_configs.xml"
  }

  subsystem_name = "multimedia"
  module_install_dir = "etc"
  part_name = "multimedia_media_standard"
}
