# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    "avmetadatafetchframeattime_fuzzer:AVmetadataFetchFrameAtTimeFuzzTest",
    "avmetadatafile_fuzzer:AVmetadataFileFuzzTest",
    "avmetadataresolvemetadata_fuzzer:AVmetadataResolveMetadataFuzzTest",
    "avmetadatasetsource_fuzzer:AVmetadataSetSource",
    "playerfile_fuzzer:PlayerFileFuzzTest",
    "playerseek_fuzzer:PlayerSeekFuzzTest",
    "playersetvolume_fuzzer:PlayerSetVolumeFuzzTest",
    "recordersetaudiosource_fuzzer:RecorderSetAudioSourceFuzzTest",
    "recordersetcapturerate_fuzzer:RecorderSetCaptureRateFuzzTest",
    "recordersetvideoencoder_fuzzer:RecorderSetVideoEncoderFuzzTest",
    "recordersetvideoencodingbitrate_fuzzer:RecorderSetVideoEncodingBitRateFuzzTest",
    "recordersetvideoframerate_fuzzer:RecorderSetVideoFrameRateFuzzTest",
    "recordersetvideosize_fuzzer:RecorderSetVideoSizeFuzzTest",
    "recordersetvideosource_fuzzer:RecorderSetVideoSourceFuzzTest",
    "recordersetoutputformat_fuzzer:RecorderSetOutputFormatFuzzTest",
    "recordergetsurface_fuzzer:RecorderGetSurfaceFuzzTest",
    "recordersetaudioencoder_fuzzer:RecorderSetAudioEncoderFuzzTest",
    "recordersetaudiosamplerate_fuzzer:RecorderSetAudioSampleRateFuzzTest",
    "recordersetaudiochannels_fuzzer:RecorderSetAudioChannelsFuzzTest",
    "recordersetaudioencodingbitrate_fuzzer:RecorderSetAudioEncodingBitRateFuzzTest",
    "recordersetmaxduration_fuzzer:RecorderSetMaxDurationFuzzTest",
    "recordersetmaxfilesize_fuzzer:RecorderSetMaxFileSizeFuzzTest",
    "recordersetoutputfile_fuzzer:RecorderSetOutputFileFuzzTest",
    "recordersetnextoutputfile_fuzzer:RecorderSetNextOutputFileFuzzTest",
    "recordersetlocation_fuzzer:RecorderSetLocationFuzzTest",
    "recordersetorientationhint_fuzzer:RecorderSetOrientationHintFuzzTest",
    "recordersetrecordercallback_fuzzer:RecorderSetRecorderCallbackFuzzTest",
    "recorderstop_fuzzer:RecorderStopFuzzTest",
    "recordersetfilesplitduration_fuzzer:RecorderSetFileSplitDurationFuzzTest",
    "recordersetparameter_fuzzer:RecorderSetParameterFuzzTest",
  ]
}
###############################################################################
