# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    "avmetadatafetchframeattime_fuzzer:AVmetadataFetchFrameAtTimeFuzzTest",
    "avmetadatafile_fuzzer:AVmetadataFileFuzzTest",
    "avmetadataresolvemetadata_fuzzer:AVmetadataResolveMetadataFuzzTest",
    "avmetadatasetsource_fuzzer:AVmetadataSetSource",
    "playerfile_fuzzer:PlayerFileFuzzTest",
    "playerseek_fuzzer:PlayerSeekFuzzTest",
    "playersetvolume_fuzzer:PlayerSetVolumeFuzzTest",
    "recordergetsurface_fuzzer:RecorderGetSurfaceFuzzTest",
    "recordersetaudiochannels_fuzzer:RecorderSetAudioChannelsFuzzTest",
    "recordersetaudioencoder_fuzzer:RecorderSetAudioEncoderFuzzTest",
    "recordersetaudioencodingbitrate_fuzzer:RecorderSetAudioEncodingBitRateFuzzTest",
    "recordersetaudiosamplerate_fuzzer:RecorderSetAudioSampleRateFuzzTest",
    "recordersetaudiosource_fuzzer:RecorderSetAudioSourceFuzzTest",
    "recordersetcapturerate_fuzzer:RecorderSetCaptureRateFuzzTest",
    "recordersetfilesplitduration_fuzzer:RecorderSetFileSplitDurationFuzzTest",
    "recordersetlocation_fuzzer:RecorderSetLocationFuzzTest",
    "recordersetmaxduration_fuzzer:RecorderSetMaxDurationFuzzTest",
    "recordersetmaxfilesize_fuzzer:RecorderSetMaxFileSizeFuzzTest",
    "recordersetnextoutputfile_fuzzer:RecorderSetNextOutputFileFuzzTest",
    "recordersetorientationhint_fuzzer:RecorderSetOrientationHintFuzzTest",
    "recordersetoutputfile_fuzzer:RecorderSetOutputFileFuzzTest",
    "recordersetoutputformat_fuzzer:RecorderSetOutputFormatFuzzTest",
    "recordersetparameter_fuzzer:RecorderSetParameterFuzzTest",
    "recordersetrecordercallback_fuzzer:RecorderSetRecorderCallbackFuzzTest",
    "recordersetvideoencoder_fuzzer:RecorderSetVideoEncoderFuzzTest",
    "recordersetvideoencodingbitrate_fuzzer:RecorderSetVideoEncodingBitRateFuzzTest",
    "recordersetvideoframerate_fuzzer:RecorderSetVideoFrameRateFuzzTest",
    "recordersetvideosize_fuzzer:RecorderSetVideoSizeFuzzTest",
    "recordersetvideosource_fuzzer:RecorderSetVideoSourceFuzzTest",
    "recorderstop_fuzzer:RecorderStopFuzzTest",
  ]
}
###############################################################################
