# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

ohos_ndk_headers("avcodec_header") {
  dest_dir = "$ndk_headers_out_dir/avcodec"
  sources = [
    "//foundation/multimedia/media_standard/interfaces/inner_api/ndk/ndk_av_codec.h",
    "//foundation/multimedia/media_standard/interfaces/inner_api/ndk/ndk_av_errors.h",
    "//foundation/multimedia/media_standard/interfaces/inner_api/ndk/ndk_av_format.h",
    "//foundation/multimedia/media_standard/interfaces/inner_api/ndk/ndk_av_memory.h",
  ]
}

ohos_ndk_library("libnative_media_ndk") {
  output_name = "native_media"
  output_extension = "so"
  ndk_description_file = "./libnative_media.ndk.json"
  system_capability = [
    "SystemCapability.Multimedia.Media.Core",
    "SystemCapability.Multimedia.Media.AudioPlayer",
    "SystemCapability.Multimedia.Media.VideoPlayer",
    "SystemCapability.Multimedia.Media.AudioRecorder",
    "SystemCapability.Multimedia.Media.VideoRecorder",
    "SystemCapability.Multimedia.Media.Codec",
    "SystemCapability.Multimedia.Media.Spliter",
    "SystemCapability.Multimedia.Media.Muxer"
  ]
  system_capability_headers = [
    "native_media/ndk_av_codec.h",
    "native_media/ndk_av_errors.h",
    "native_media/ndk_av_format.h",
    "native_media/ndk_av_memory.h",
  ]
}
