# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "multimedia_player_framework/avcodec_list"

ohos_unittest("avcodec_list_unit_test") {
  module_out_path = module_output_path
  include_dirs = [
    "./include",
    "//foundation/multimedia/player_framework/interfaces/inner_api/native",
    "//foundation/multimedia/player_framework/services/utils/include",
    "//foundation/multimedia/player_framework/frameworks/native/avcodeclist",
    "//foundation/multimedia/player_framework/test/unittest/common/include",
  ]

  cflags = [
    "-Wall",
    "-Werror",
  ]

  sources = [
    "src/avcodec_list_mock.cpp",
    "src/avcodec_list_unit_test.cpp",
  ]

  deps = [
    "//foundation/multimedia/player_framework/interfaces/inner_api/native:media_client",
    "//foundation/multimedia/player_framework/services/utils:media_service_utils",
    "//utils/native/base:utils",
  ]
}
