# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

group("media_engine_gst_avspliter") {
  deps = [
    ":gst_avspliter",
  ]
}

config("gst_avspliter_config") {
  visibility = [ ":*" ]

  cflags = [
    "-fno-rtti",
    "-fno-exceptions",
    "-Wall",
    "-fno-common",
    "-fstack-protector-strong",
    "-FPIC",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-fvisibility=hidden",
    "-Wformat=2",
    "-Wfloat-equal",
    "-Wdate-time",
    "-Wno-format-nonliteral"
  ]

  include_dirs = [
    "//foundation/multimedia/media_standard/services/engine/gstreamer/plugins/sink/memsink",
    "//third_party/gstreamer/gstreamer",
    "//third_party/gstreamer/gstreamer/libs",
    "//third_party/gstreamer/gstplugins_base",
    "//third_party/gstreamer/gstplugins_base/gst-libs",
    "//third_party/glib/glib",
    "//third_party/glib",
    "//third_party/glib/gmodule",
  ]
}

ohos_shared_library("gst_avspliter") {
  sources = [
    "gst_avspliter.cpp",
  ]

  configs = [ ":gst_avspliter_config" ]

  ldflags = [ "-Wl,-rpath=/system/lib/media/plugins/" ]

  deps = [
    "//third_party/glib:glib",
    "//third_party/glib:gmodule",
    "//third_party/glib:gobject",
    "//third_party/gstreamer/gstreamer:gstbase",
    "//third_party/gstreamer/gstreamer:gstreamer",
    "//third_party/gstreamer/gstplugins_base:gstplayback",
    "//third_party/gstreamer/gstplugins_base:gstpbutils",
    "//foundation/multimedia/media_standard/services/engine/gstreamer/plugins/sink/memsink:gst_mem_sink",
  ]

  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]

  relative_install_dir = "media/plugins"
  subsystem_name = "multimedia"
  part_name = "multimedia_media_standard"
}
