# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import("//foundation/multimedia/player_framework/config.gni")
import("./../../../../multimedia_player_framework_aafwk.gni")
module_output_path = "player_framework/soundpool"
MEDIA_ROOT_DIR = "//foundation/multimedia/player_framework/"

##############################fuzztest##########################################
ohos_fuzztest("SoundPoolPlayStopFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "$MEDIA_ROOT_DIR/test/fuzztest/soundpool_fuzztest/soundpoolplaystop_fuzzer"
  resource_config_file = "$MEDIA_ROOT_DIR/test/fuzztest/resource/ohos_test.xml"

  include_dirs = [
    "$MEDIA_ROOT_DIR/interfaces/inner_api/native/soundpool/include",
    "$MEDIA_ROOT_DIR/test/fuzztest/common/",
    "${av_codec_root_path}/interfaces/inner_api/native",
  ]
  cflags = [
    "-std=c++17",
    "-fno-rtti",
    "-fno-exceptions",
    "-Wall",
    "-fno-common",
    "-fstack-protector-strong",
    "-Wshadow",
    "-FPIC",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-fvisibility=hidden",
    "-Wformat=2",
    "-Wfloat-equal",
    "-Wdate-time",
    "-Werror",
    "-Wextra",
    "-Wimplicit-fallthrough",
    "-Wsign-compare",
    "-Wunused-parameter",
  ]
  if (multimedia_player_framework_support_jssoundpool) {
    sources = [
      "$MEDIA_ROOT_DIR/test/fuzztest/common/aw_common.cpp",
      "$MEDIA_ROOT_DIR/test/fuzztest/common/test_soundpool.cpp",
      "soundpoolplaystop_fuzzer.cpp",
    ]
  }
  deps = [
    "$MEDIA_PLAYER_GRAPHIC/rosen/modules/render_service_client:librender_service_client",
    "$MEDIA_ROOT_DIR/frameworks/native/soundpool:soundpool_client",
    "$MEDIA_ROOT_DIR/interfaces/inner_api/native:media_client",
  ]
  external_deps = [
    "audio_framework:audio_client",
    "audio_framework:audio_renderer",
    "hilog:libhilog",
  ]
}