# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "multimedia_player_framework/system_sound_manager"

ohos_unittest("system_sound_manager_unit_test") {
  module_out_path = module_output_path
  include_dirs = [
    "./include",
    "../../",
    "../../ringtone_player",
    "../../system_sound_vibrator",
    "../../system_tone_player",
    "../../../../../services/utils/include",
    "../../../../../interfaces/inner_api/native/audio_haptic/include",
    "../../../../../interfaces/inner_api/native/soundpool/include",
    "../../../../../interfaces/inner_api/native/system_sound_manager/include",
  ]
  cflags = [
    "-Wall",
    "-Werror",
  ]

  sources = [
    "src/system_sound_manager_unit_test.cpp",
    "../../system_sound_manager_impl.cpp",
    "src/get_self_permissions.cpp",
    "../../ringtone_player/ringtone_player_impl.cpp",
    "../../system_sound_vibrator/system_sound_vibrator.cpp",
    "../../system_tone_player/system_tone_player_impl.cpp",
  ]

  deps = [
    "../../../../../interfaces/inner_api/native:media_client",
    "../../../audio_haptic:audio_haptic",
    "../../../soundpool:soundpool_client",
    "../../../system_sound_manager:system_sound_client",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:appkit_native",
    "ability_runtime:data_ability_helper",
    "ability_runtime:app_context",
    "audio_framework:audio_client",
    "bundle_framework:appexecfwk_base",
    "config_policy:configpolicy_util",
    "graphic_surface:surface",
    "hilog:libhilog",
    "qos_manager:qos",
    "relational_store:native_dataability",
    "relational_store:native_rdb",
    "samgr:samgr_proxy",
    "c_utils:utils",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "data_share:datashare_consumer",
    "ipc:ipc_single",
    "miscdevice:vibrator_interface_native",
    "ringtone_library:ringtone_data_extension",
    "ringtone_library:ringtone_data_helper",
  ]

  resource_config_file =
      "../../../../../../player_framework/test/unittest/resources/ohos_test.xml"
}